add u-m styles; typekit id and press description added to seeds; tweak citable link positioning application wide

--- a/app/assets/stylesheets/heliotrope.scss
+++ b/app/assets/stylesheets/heliotrope.scss
@@ -321,6 +321,12 @@ footer.press {
     border-top: 0 solid #fff;
   }
 
+  #info {
+    table tbody tr:last-of-type th {
+      vertical-align: middle;
+    }
+  }
+
   .tab-content {
     table.table {
       margin-top: 1.5em;
