--- a/app/views/curation_concerns/file_sets/_form.html.erb
+++ b/app/views/curation_concerns/file_sets/_form.html.erb
@@ -39,7 +39,7 @@
           <%= f.input :search_year, input_html: { class: 'form-control' }, placeholder: 'YYYY' %>
           <%= f.input :display_date, as: :multi_value, label: 'Display Date', input_html: { class: 'form-control' } %>
           <%= f.input :keywords, as: :multi_value, input_html: { class: 'form-control' } %>
-          <%= f.input :language, input_html: { multiple: true, value: curation_concern.language.first, class: 'form-control' } %>
+          <%= f.input :language, as: :multi_value, input_html: { class: 'form-control' } %>
           <%= f.input :transcript, input_html: { class: 'form-control' } %>
           <%= f.input :translation, as: :text, input_html: { multiple: true, value: curation_concern.translation.first, class: 'form-control' } %>
           <%= f.input :relation, input_html: { multiple: true, value: curation_concern.relation.first, class: 'form-control' } %>
