--- a/app/views/curation_concerns/file_sets/show.html.erb
+++ b/app/views/curation_concerns/file_sets/show.html.erb
@@ -39,7 +39,7 @@
     <div class="col-sm-6">
       <div class="row asset-attributes">
         <div class="col-sm-12">
-          <h2><%= @presenter.title %></h2>
+          <h2 id="asset-title"><%= @presenter.title %></h2>
           <h3>From <em><%= link_to @presenter.monograph.title, main_app.monograph_catalog_path(@presenter.monograph_id) %></em>
             by <%= @presenter.monograph.creator_given_name.first %> <%= @presenter.monograph.creator_family_name.first %><%= contributors_string(@presenter.monograph.contributor) %></h3>
           <br />
