Resolves #674, Resolves #683 Add citation metadata for google scholar
Metadata for monographs:

citation_title
citation_author(s)
citation_publication_date
citation_isbn
citation_publisher

Metadata For file_sets:

citation_title
citation_author(s)
citation_publication_date
citation_doi *OR* DC.identifier (handle)

--- a/app/views/layouts/boilerplate.html.erb
+++ b/app/views/layouts/boilerplate.html.erb
@@ -29,6 +29,9 @@
     <meta name="msapplication-TileImage" content="/assets/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
+    <!-- Citation metadata for Google Scholar -->
+    <%= render 'shared/metadata' %>
+
   <% unless press_subdomain.nil? %>
     <!-- Typekit -->
     <%= render 'shared/typekit' %>
