--- a/app/views/curation_concerns/file_sets/media_display/_video.html.erb
+++ b/app/views/curation_concerns/file_sets/media_display/_video.html.erb
@@ -1,5 +1,16 @@
-  <video id="video" controls="controls" class="video-js vjs-default-skin" data-setup="{}" preload="auto">
-    <source src="<%= main_app.download_path(file_set, file: 'webm') %>" type="video/webm" />
-    <source src="<%= main_app.download_path(file_set, file: 'mp4') %>" type="video/mp4" />
-    Your browser does not support the video tag.
-  </video>
+<video
+  id="video"
+  class="video-js vjs-fluid vjs-default-skin"
+  controls
+  preload="auto"
+  data-setup='{}'>
+  <source src="<%= main_app.download_path(file_set, file: 'webm') %>" type="video/webm" />
+  <source src="<%= main_app.download_path(file_set, file: 'mp4') %>" type="video/mp4" />
+  <p class="vjs-no-js">
+    To view this video please enable JavaScript, and consider upgrading to a
+    web browser that
+    <a href="http://videojs.com/html5-video-support/" target="_blank">
+      supports HTML5 video
+    </a>
+  </p>
+</video>
