--- a/app/views/layouts/boilerplate.html.erb
+++ b/app/views/layouts/boilerplate.html.erb
@@ -4,6 +4,9 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
   <head>
+    <link href="http://vjs.zencdn.net/5.14.1/video-js.css" rel="stylesheet">
+    <script src="http://vjs.zencdn.net/5.14.1/video.js"></script>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title><%= content_for?(:page_title) ? yield(:page_title) : default_page_title %></title>
