--- a/app/assets/stylesheets/heliotrope.scss
+++ b/app/assets/stylesheets/heliotrope.scss
@@ -357,6 +357,12 @@ footer.press {
         background-color: #f5f5f5;
         border-color: #DDD;
 
+        h3 {
+          color: #333;
+          display: inline-block;
+          margin-right: 68%;
+        }
+
         label {
           color: #333;
         }
