Sections become FileSet metadata
* Renamed the 'section' property to 'section_title' since that's what existing UI code expects.  Also refactored some specs to use the new propery

* Make rubocop happy

* Updated some specs to use the new FileSet#section_title property instead of Section#title

* Rake task to migrate existing prod data

* Added test cases for ordered_section_titles method

* Deleted much of the Section-related code

* Added TODO notes to rake tasks to remove Section code

* file_sets need to be reindexed after Section removal so that monograph_id is in their index

* reverse migrating FileSets, verification tasks

  Filesets are reversed on Sections' ordered members, so we want to undo
  that as we move them to the monograph.

  The rake tasks are a simple checks to be run before/after the Section
  removal task.

* importer is updated for sections as metadata

* don't show section_title in the file_set list of the monograph catalog page

--- a/app/views/curation_concerns/file_sets/_attribute_rows.html.erb
+++ b/app/views/curation_concerns/file_sets/_attribute_rows.html.erb
@@ -1,4 +1,4 @@
-<%= presenter.attribute_to_html(:relation) %>
+<%= presenter.attribute_to_html(:section_title) %>
 
 <%= presenter.attribute_to_html(:description, render_as: :markdown) %>
 <%= presenter.attribute_to_html(:creator_full_name, label: t('creator'), catalog_search_link: true) %>
