--- a/app/views/curation_concerns/file_sets/_form.html.erb
+++ b/app/views/curation_concerns/file_sets/_form.html.erb
@@ -42,7 +42,7 @@
           <%= f.input :language, as: :multi_value, input_html: { class: 'form-control' } %>
           <%= f.input :transcript, as: :text, input_html: { class: 'form-control' } %>
           <%= f.input :translation, as: :text, input_html: { multiple: true, value: curation_concern.translation.first, class: 'form-control' } %>
-          <%= f.input :relation, input_html: { multiple: true, value: curation_concern.relation.first, class: 'form-control' } %>
+          <%= f.input :section_title, as: :multi_value, input_html: { class: 'form-control' } %>
           <%= f.input :book_needs_handles, input_html: { class: 'form-control' } %>
           <%= f.input :doi, input_html: { class: 'form-control' } %>
           <%= f.input :hdl, input_html: { class: 'form-control' } %>
