--- a/app/views/monograph_catalog/_index_header_list_file_set.html.erb
+++ b/app/views/monograph_catalog/_index_header_list_file_set.html.erb
@@ -5,7 +5,7 @@
       <% counter = document_counter_with_offset(document_counter) %>
       <%= render_markdown link_to_document document, document_show_link_field(document), counter: counter %>
     </h4>
-    <% if document.section_id.present? %>
-      <p>From <%= render_markdown document.section_title.first %></p>
+    <% if !document.section_title.blank? %>
+      <p>From <%= render_markdown document.section_title.to_sentence %></p>
     <% end %>
   </div>
