--- a/app/views/shared/_my_actions.html.erb
+++ b/app/views/shared/_my_actions.html.erb
@@ -6,6 +6,9 @@
     </a>
 
     <ul class="dropdown-menu">
+      <li><%= link_to 'Dashboard', main_app.dashboard_path, role: 'menuitem'  %></li>
+      <li class="divider"></li>
+
       <% include_collections_link ||= can?(:create, Collection) %>
 
       <% if include_collections_link %>
