update leaflet to current version to add new accessibility features; update leaflet-iiif for compatibility; move leaflet related files to vendor/assets

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,7 +13,7 @@
  *= require_tree .
  *= require_self
  *= require jquery-ui/datepicker
- *= require leaflet
+ *= require leaflet_1.0.3
  *= require blacklight_facets
  *= require ableplayer
  *= require heliotrope
