Resolves #123: Dashboard list all users

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -1,1 +1,11 @@
 <h1>Dashboard</h1>
+<% user =  UserPresenter.new(current_user, current_user) %>
+<% if can? :read, user %>
+  <h2>User</h2>
+  <%= render partial: "users/user", locals: { user: user } %>
+<% end %>
+<% users = UsersPresenter.new(current_user) %>
+<% if can? :read, users %>
+  <h2>Users</h2>
+  <%= render partial: "users/users", locals: { users: users } %>
+<% end %>
