--- a/app/views/curation_concerns/file_sets/_media.html.erb
+++ b/app/views/curation_concerns/file_sets/_media.html.erb
@@ -30,8 +30,14 @@
   </figure> <!-- /.image/media -->
 
   <% if @presenter.transcript.present? %>
-  <!-- AblePlayer manages this div -->
-  <div id="transcript"></div>
+      <div class="panel panel-default transcript">
+        <div class="panel-heading">
+          <h3 class="panel-title">Transcript</h3>
+        </div>
+        <div class="panel-body fixed">
+          <p><%= presenter.attribute_to_html(:transcript, render_as: :markdown, label: '') %></p>
+        </div>
+      </div><!-- /.transcript panel -->
   <% end %>
 
   <% if @presenter.translation.present? %>
