--- a/app/views/curation_concerns/file_sets/media_display/_video.html.erb
+++ b/app/views/curation_concerns/file_sets/media_display/_video.html.erb
@@ -1,4 +1,4 @@
-<video id="video" preload="auto" data-able-player >
+<video id="video" preload="auto" data-able-player data-include-transcript="false">
   <source src="<%= main_app.download_path(file_set, file: 'webm') %>" type="video/webm" />
   <source src="<%= main_app.download_path(file_set, file: 'mp4') %>" type="video/mp4" />
   <% if @presenter.transcript.present? %>
