--- a/app/views/curation_concerns/file_sets/_show_actions.html.erb
+++ b/app/views/curation_concerns/file_sets/_show_actions.html.erb
@@ -7,7 +7,7 @@
   <% if can?(:edit, presenter) || presenter.allow_download?  %>
     <%= link_to "Download", main_app.download_path(presenter), class: 'btn btn-default btn-lg' %>
   <% end %>
-  <!-- comment this out for now, #803
+  <% if can?(:edit, presenter) || presenter.allow_embed? %>
   <form style="display:inline;">
     <input type="text" style="display:none;" id="embedcode" value="<%= presenter.embed_code %>" readonly="readonly">
     <span class="btn btn-default btn-lg" onclick="CopyToClipboard()">&lt;html /&gt;</span>
@@ -22,7 +22,7 @@
       }
     </script>
   </form>
-  -->
+  <% end %>
   <!-- TODO: add citation generator -->
   <!-- <button type="button" class="btn btn-default btn-lg cite">Cite</button> -->
   <!-- TODO: figure out what asset metadata field holds the permanent URL and replace below -->
