--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -1,3 +1,10 @@
-// Place all the styles related to the dashboard controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+/* Sidebar navigation */
+.nav-sidebar {
+  background-color: #f5f5f5;
+}
+.nav-sidebar > li > a {
+}
+.nav-sidebar > .active > a {
+  color: #fff;
+  background-color: #428bca;
+}
