add login link to footer and responsive menu on fulcrum static pages

--- a/fulcrum/_includes/footer.html
+++ b/fulcrum/_includes/footer.html
@@ -13,6 +13,7 @@
             <li><a class="white-text" href="/blog/">Blog</a></li>
             <li><a class="white-text" href="mailto:{{ site.email }}">Contact</a></li>
             <li><a class="white-text" href="https://github.com/{{ site.github_username }}">Contribute</a></li>
+            <li><a class="white-text" href="/users/sign_in">Login</a></li>
           </ul>
         </div>
         <div class="col l1 s12 offset-l1 footer-menu">
