--- a/fulcrum/_includes/header.html
+++ b/fulcrum/_includes/header.html
@@ -25,6 +25,7 @@
           <li><a href="/blog/">Blog</a></li>
           <li><a href="mailto:{{ site.email }}">Contact</a></li>
           <li><a href="https://github.com/{{ site.github_username }}">Contribute</a></li>
+          <li><a href="/users/sign_in">Login</a></li>
         </ul>
         <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
       </div>
