--- a/app/views/dashboard/_sidebar.html.erb
+++ b/app/views/dashboard/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<ul class="nav nav-sidebar">
+<ul class="nav nav-sidebar" role="navigation">
   <li <%= "class=active" if partial.to_s == :home.to_s %>><a href="<%= partial_dashboard_path(partial: :home) %>"><span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home</a></li>
 <% if current_user.platform_admin? %>
   <li <%= "class=active" if partial.to_s == :publishers.to_s %>><a href="<%= partial_dashboard_path(partial: :publishers) %>"><span class="glyphicon glyphicon-tower" aria-hidden="true"></span> Publishers</a></li>
@@ -8,7 +8,9 @@
   <li <%= "class=active" if partial.to_s == :items.to_s %>><a href="<%= partial_dashboard_path(partial: :items) %>"><span class="glyphicon glyphicon-tags" aria-hidden="true"></span> Items</a></li>
   <li <%= "class=active" if partial.to_s == :pages.to_s %>><a href="<%= partial_dashboard_path(partial: :pages) %>"><span class="glyphicon glyphicon-file" aria-hidden="true"></span> Pages</a></li>
   <li <%= "class=active" if partial.to_s == :reports.to_s %>><a href="<%= partial_dashboard_path(partial: :reports) %>"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span> Reports</a></li>
-  <p><br/><br/><br/></p>
+</ul>
+  <p class="nav nav-sidebar"><br/><br/><br/></p>
+<ul class="nav nav-sidebar" role="navigation">
   <li <%= "class=active" if partial.to_s == :customize.to_s %>><a href="<%= partial_dashboard_path(partial: :customize) %>"><span class="glyphicon glyphicon-tint" aria-hidden="true"></span> Customize</a></li>
   <li <%= "class=active" if partial.to_s == :settings.to_s %>><a href="<%= partial_dashboard_path(partial: :settings) %>"><span class="glyphicon glyphicon-cog" aria-hidden="true"></span> Settings</a></li>
   <li <%= "class=active" if partial.to_s == :help.to_s %>><a href="<%= partial_dashboard_path(partial: :help) %>"><span class="glyphicon glyphicon-question-sign" aria-hidden="true"></span> Help</a></li>
