--- a/app/views/dashboard/_users.html.erb
+++ b/app/views/dashboard/_users.html.erb
@@ -1,4 +1,5 @@
 <% users = UsersPresenter.new(current_user) %>
+<h1>Users</h1>
 <% if can? :read, users %>
     <%= render partial: "users/users", locals: { users: users } %>
 <% end %>
