--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,10 +1,11 @@
 <!--<%#= content_for(:body_attributes, 'data-no-turbolink') %>-->
+<% provide :page_title, "Dashboard #{@partial.capitalize}" %>
 <div id="dashboard" class="container-fluid">
   <div class="row">
-    <div class="col-sm-3 col-md-2" id="sidebar" role="navigation">
+    <div class="col col-sm-3 col-md-2" id="sidebar" role="navigation">
       <%= render partial: 'sidebar', locals: { current_user: current_user, partial: @partial } %>
     </div><!--/span-->
-    <div class="col-sm-9 col-md-10 main">
+    <div class="col col-sm-9 col-md-10 main">
       <div id="maincontent" class="container col-sm-12 col-md-12">
         <%= render partial: "#{@partial}", locals: { current_user: current_user } %>
       </div>
