--- a/app/views/shared/_site_search.html.erb
+++ b/app/views/shared/_site_search.html.erb
@@ -9,20 +9,16 @@
 <%= form_tag catalog_url, method: :get, class: "search-form navbar-left navbar-form" do %>
   <fieldset>
     <legend class="sr-only">Search <%= application_name %></legend>
-    <%= label_tag :catalog_search, t('curation_concerns.search.form.q.label'), class: "sr-only" %>
-    <%= render_hash_as_hidden_fields(search_state.params_for_search.except(:q, :search_field, :qt, :page, :utf8)) %>
-
-
+    <%= render_hash_as_hidden_fields(search_state.params_for_search.except(:q, :search_field, :qt, :page, :utf8, :partial)) %>
     <div class="input-group">
+      <%= label_tag :catalog_search, t('curation_concerns.search.form.q.label'), class: "sr-only" %>
       <%= text_field_tag(:q, params[:q], class: "q search-query form-control", id: "catalog_search",
                          placeholder: t('curation_concerns.search.form.q.placeholder'), tabindex: "0", type: "search") %>
-
       <div class="input-group-btn">
         <button type="submit" class="search-submit btn btn-primary" id="keyword-search-submit" tabindex="0">
           <i class="glyphicon glyphicon-search"></i><span class="sr-only">Search</span>
         </button>
       </div>
     </div>
-
   </fieldset>
 <% end %>
