--- a/app/views/curation_concerns/file_sets/_media.html.erb
+++ b/app/views/curation_concerns/file_sets/_media.html.erb
@@ -15,6 +15,8 @@
             }).addLayer(L.tileLayer.iiif("<%= riiif.info_path(@presenter.id) %>"));
           });
       </script>
+        <% elsif @presenter.epub? %>
+            <%= render partial: 'curation_concerns/file_sets/media_display/epub', locals: { file_set: @presenter } %>
       <% else %>
       <%= media_display @presenter %>
       <% end %>
