direct external resource links from monograph gallery

--- a/app/assets/stylesheets/heliotrope.scss
+++ b/app/assets/stylesheets/heliotrope.scss
@@ -259,6 +259,10 @@ footer.press {
     }
   }
 
+  #ext-res-gallery {
+    text-align: center;
+  }
+
 }
 ///////////////////////////////////
 // ASSET PAGES
