--- a/app/views/monograph_catalog/_thumbnail_file_set.html.erb
+++ b/app/views/monograph_catalog/_thumbnail_file_set.html.erb
@@ -1,5 +1,8 @@
 <%- if has_thumbnail?(document) && tn = render_thumbnail_tag(document, {}, :counter => document_counter_with_offset(document_counter)) %>
 <div class="document-thumbnail col-sm-3">
   <%= tn %>
+  <% if external_resource?(document) %>
+    <a class="external" href="<%= document.ext_url_doi_or_handle %>"><span class="glyphicon glyphicon-share" aria-hidden="true"></span> View Object</a>
+  <% end %>
 </div>
 <%- end %>
