--- a/app/views/curation_concerns/file_sets/show.html.erb
+++ b/app/views/curation_concerns/file_sets/show.html.erb
@@ -45,7 +45,13 @@
         <div class="col-sm-12">
           <h2 id="asset-title"><%= @presenter.title %></h2>
           <h3>From <em><%= link_to @presenter.monograph.title, main_app.monograph_catalog_path(@presenter.monograph_id) %></em>
-            by <%= @presenter.monograph.creator_given_name %> <%= @presenter.monograph.creator_family_name %><%= contributors_string(@presenter.monograph.contributor) %></h3>
+            <% if @presenter.monograph.creator_family_name.present? %>
+              by <%= @presenter.monograph.creator_given_name %> <%= @presenter.monograph.creator_family_name %><%= contributors_string(@presenter.monograph.contributor) %>
+            <% end %>
+            <% if @presenter.monograph.editor.present? %>
+              edited by <%= @presenter.monograph.editor %>
+            <% end %>
+          </h3>
           <br />
           <%= render "attributes", presenter: @presenter %>
         </div>
