resource-type-based icons for external resources

--- a/app/views/monograph_catalog/_index_gallery_file_set_wrapper.html.erb
+++ b/app/views/monograph_catalog/_index_gallery_file_set_wrapper.html.erb
@@ -1,13 +1,19 @@
 <div class="document col-xs-6 col-md-3">
   <div class="thumbnail">
-    <%= render_thumbnail_tag(document, {}, :counter => document_counter_with_offset(document_counter)) %>
+    <% if document.external_resource == 'yes' %>
+      <% icon_string = '<span class="glyphicon ' + glyphicon_type(document.resource_type) + ' external-resource-gallery" aria-hidden="true"></span>' %>
+      <% tn = render_thumbnail_tag(document, {}, :counter => document_counter_with_offset(document_counter)) %>
+      <%= tn.gsub(/<img.*>/, icon_string + '<br/>').html_safe %>
+    <% else %>
+      <%= render_thumbnail_tag(document, {}, :counter => document_counter_with_offset(document_counter)) %>
+    <% end %>
     <div class="caption">
       <%= render_document_partials document, blacklight_config.view_config(:gallery).partials, :document_counter => document_counter %>
     </div>
     <% if document.external_resource == 'yes' %>
-        <div id="ext-res-gallery">
-          <a href="<%= document.ext_url_doi_or_handle %>"><span class="glyphicon glyphicon-share" aria-hidden="true"></span> View External Object</a>
-        </div>
+      <div id="external-resource-gallery-caption">
+        <a href="<%= document.ext_url_doi_or_handle %>"><span class="glyphicon glyphicon-share" aria-hidden="true"></span> View External Object</a>
+      </div>
     <% end %>
   </div>
 </div>
