--- a/app/assets/stylesheets/heliotrope.scss
+++ b/app/assets/stylesheets/heliotrope.scss
@@ -162,6 +162,16 @@ footer.press {
         img {
         margin-top: .9em;
         }
+
+        .external-resource-list {
+          font-size: 30px;
+          padding-left: 45px;
+          padding-bottom: 15px;
+        }
+
+        .glyphicon-share {
+          padding-left: 15px;
+        }
       }
 
       .documentHeader {
@@ -259,7 +269,12 @@ footer.press {
     }
   }
 
-  #ext-res-gallery {
+  .external-resource-gallery {
+    font-size: 40px;
+    padding-left: 75px;
+  }
+
+  #external-resource-gallery-caption {
     text-align: center;
   }
 
