--- a/app/views/monograph_catalog/_thumbnail_file_set.html.erb
+++ b/app/views/monograph_catalog/_thumbnail_file_set.html.erb
@@ -1,8 +1,11 @@
 <%- if has_thumbnail?(document) && tn = render_thumbnail_tag(document, {}, :counter => document_counter_with_offset(document_counter)) %>
 <div class="document-thumbnail col-sm-3">
-  <%= tn %>
   <% if document.external_resource == 'yes' %>
+    <% icon_string = '<span class="glyphicon ' + glyphicon_type(document.resource_type) + ' external-resource-list" aria-hidden="true"></span>' %>
+    <%= tn.gsub(/<img.*>/, icon_string + '<br/>').html_safe %>
     <a class="external" href="<%= document.ext_url_doi_or_handle %>"><span class="glyphicon glyphicon-share" aria-hidden="true"></span> View Object</a>
+  <% else %>
+    <%= tn %>
   <% end %>
 </div>
 <%- end %>
